<resources>
    <string name="app_name">Car Pooling App</string>
    <string name="name">Full Name</string>
    <string name="nick">Nickname</string>
    <string name="email">email@address</string>
    <string name="location">Location</string>
    <string name="ivContentDesc">Profile picture</string>
    <string name="imgbtnContentDesc">Choose a photo</string>
    <string name="epmCamera">Take a picture</string>
    <string name="epmGallery">Select from gallery</string>
    <string name="title_activity_main">Car Pooling App</string>
    <string name="menu_profile">Profile</string>
    <string name="carImage">Photo of the car:</string>
    <string name="depLoc">Departure Location</string>
    <string name="arrLoc">Arrival Location</string>
    <string name="date">Departure date</string>
    <string name="depTime">Departure Time</string>
    <string name="seats">Seats:</string>
    <string name="duration">Duration:</string>
    <string name="price">Price:</string>
    <string name="description">Description:</string>
    <string name="stops">Stop:</string>
    <string name="arrTime">Arrival Time</string>
    <string name="seatsExample">e.g. 3</string>
    <string name="priceExample">e.g. 10.50</string>
    <string name="descExample">Insert here some useful info about the trip (e.g. space for luggage, animals admitted…)</string>
    <string name="newStop">Add new stop</string>
    <string name="stopTime">Hour</string>
    <string name="dateFormat">"%2$s %1$02d, %3$d "</string>
    <string name="timeFormat">%02d:%02d</string>
    <string name="pickDate">Choose a date</string>
    <string name="pickTime">Choose a time</string>
    <string name="trips">My Trips</string>
    <string name="othersTrips">Available Trips</string>
    <string name="editProfile">Edit profile</string>
    <string name="editTrip">Edit trip</string>
    <string name="trip">Trip Details</string>
    <string name="emptyFields">Please fill all the required fields</string>
    <string name="durationFormat">%d h %d m</string>
    <string name="stopsNotSubsequent">Stops must be successive to each other</string>
    <string name="timeOutOfBounds">Stop times must be between departure and arrival time</string>
    <string name="invalidTimeFormat">Invalid time format</string>
    <string name="snackTripSaved">Trip saved successfully</string>
    <string name="snackProfileSaved">Profile saved!</string>
    <string name="showPrice">€   %.02f</string>
    <string name="daoSetProfileError">Database error, try again later</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome! Please sign in to continue</string>
    <string name="search">Search</string>
    <string name="notifyInterest">Notify owner of your interest</string>
    <string name="interestedUsers">Interested Users:</string>
    <string name="advertise">Advertise</string>
    <string name="emptyTripList">No trips found!</string>
    <string name="profileNotFound">Profile not found!</string>
    <string name="tripNotFound">Trip not found!</string>

    <string name="searchByDate">Search by departure date</string>
    <string name="searchByDepTimeMin">Earliest departure time</string>
    <string name="searchByDepTimeMax">Latest departure time</string>
    <string name="searchByArrTimeMin">Earliest arrival time</string>
    <string name="searchByArrTimeMax">Latest arrival time</string>
    <string name="searchByArrLoc">Search by arrival location</string>
    <string name="searchByDepLoc">Search by departure location</string>
    <string name="minPrice">Minimum price</string>
    <string name="maxPrice">Maximum price</string>
    <string name="searchFragment">Search for Trips</string>
    <string name="submitSearch">Search</string>
    <string name="priceExampleMax">e.g. 20.50</string>
    <string name="searchFiltersCleared">Search filters cleared</string>
    <string name="exceededSeats">Cannot confirm more people than the available seats</string>
    <string name="tripInterest">You are interested in this trip</string>
    <string name="tripNoInterest">You are no more interested in this trip</string>
    <string name="confirm">Confirm</string>
    <string name="reject">Reject</string>
    <string name="pending">Pending</string>
    <string name="bookingState">Booking State</string>
    <string name="confirmed">Confirmed</string>
    <string name="rejected">Rejected</string>
    <string name="clear_search">Clear search filters</string>
    <string name="interestingTrips">Trips of Interest</string>
    <string name="boughtTrips">Bought Trips</string>
    <string name="yesConfirm">Yes</string>
    <string name="noConfirm">No</string>
    <string name="areYouSure">Are you sure you want to confirm? This can\'t be undone and the payment will be executed!</string>
    <string name="stopLocation">Stop Location</string>
    <string name="chooseLocation">Choose Type of Location Selected:</string>
    <string name="deleteMarker">Do you want to remove this location?</string>
    <string name="departurePoint">Departure</string>
    <string name="arrivalPoint">Arrival</string>
    <string name="stopPoint">Stop</string>
    <string name="errorOnAddress">Address not found</string>
    <string name="details">Details</string>
    <string name="detailsDialog">Touch the map to open the associated route with the detailed steps</string>
    <string name="dialogDontShow">Don\'t show again</string>
    <string name="editDialog">Touch on the map to add a new location (departure, arrival or stop)</string>
    <string name="routeDialog">Touch the steps to see their position on the map</string>
    <string name="complete">Completed</string>
    <string name="driverRating">Driver Rating:</string>
    <string name="passengerRating">Passenger Rating:</string>
    <string name="tripIsCompleteWarning">Can not undo trip completion!</string>
    <string name="submitPassengerRating">Submit rating</string>
    <string name="ratingSubmitted">Rating submitted</string>
    <string name="ratingAlert">Do you want to confirm this rating?</string>
    <string name="commentAlert">(Optionally) Here you can leave a comment...</string>
    <string name="routeFragment">Trip route</string>
    <string name="ratingsFragment">Ratings details</string>
    <string name="logoutConfirm">Are you sure you want to logout?</string>
    <string name="driverLabel">Driver:</string>
    <string name="loadingDescription">Image for loading state</string>
</resources>