<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_others_list">

    <fragment
        android:id="@+id/tripDetailsFragment"
        android:name="it.polito.mad.carpoolingapp.TripDetailsFragment"
        android:label="@string/trip"
        tools:layout="@layout/fragment_trip_details"
        app:startDestination="@id/action_tripDetailsFragment_to_nav_show_profile">
        <action
            android:id="@+id/action_tripDetailsFragment_to_tripEditFragment"
            app:destination="@id/tripEditFragment" />
        <action
            android:id="@+id/action_tripDetailsFragment_to_nav_show_profile"
            app:destination="@id/nav_show_profile" />
        <action
            android:id="@+id/action_tripDetailsFragment_to_nav_trip_list"
            app:destination="@id/nav_trip_list" />
        <action
            android:id="@+id/action_tripDetailsFragment_to_othersTripListFragment"
            app:destination="@id/nav_others_list" />
        <action
            android:id="@+id/action_tripDetailsFragment_to_nav_interesting_list"
            app:destination="@id/nav_interesting_list" />
    </fragment>

    <action
        android:id="@+id/action_tripDetailsFragment_to_tripRoute"
        app:destination="@id/tripRoute"
        app:popUpTo="@layout/fragment_trip_details"/>

    <fragment
        android:id="@+id/tripEditFragment"
        android:name="it.polito.mad.carpoolingapp.TripEditFragment"
        android:label="@string/editTrip">
        <action
            android:id="@+id/action_tripEditFragment_to_tripDetailsFragment"
            app:destination="@id/tripDetailsFragment"
            app:popUpTo="@id/nav_trip_list"/>
        <action
            android:id="@+id/action_tripEditFragment_to_nav_show_profile"
            app:destination="@id/nav_show_profile" />
    </fragment>

    <fragment
        android:id="@+id/nav_trip_list"
        android:name="it.polito.mad.carpoolingapp.TripListFragment"
        android:label="@string/trips"
        tools:layout="@layout/fragment_trip_list" >
        <action
            android:id="@+id/action_tripListFragment_to_tripEditFragment"
            app:destination="@id/tripEditFragment" />
        <action
            android:id="@+id/action_tripListFragment_to_tripDetailsFragment"
            app:destination="@id/tripDetailsFragment" />
        <action
            android:id="@+id/action_nav_trip_list_to_nav_edit_profile"
            app:destination="@id/nav_edit_profile" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_profile"
        android:name="it.polito.mad.carpoolingapp.EditProfileFragment"
        android:label="@string/editProfile"
        tools:layout="@layout/fragment_edit_profile" >
        <action
            android:id="@+id/action_nav_edit_profile_to_nav_show_profile"
            app:destination="@id/nav_show_profile"
            app:popUpTo="@id/nav_trip_list"/>
    </fragment>

    <fragment
        android:id="@+id/nav_show_profile"
        android:name="it.polito.mad.carpoolingapp.ShowProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_show_profile" >
        <action
            android:id="@+id/action_nav_show_profile_to_nav_edit_profile"
            app:destination="@id/nav_edit_profile" />
        <action
            android:id="@+id/action_nav_show_profile_to_ratingsFragment"
            app:destination="@id/ratingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_others_list"
        android:name="it.polito.mad.carpoolingapp.OthersTripListFragment"
        android:label="@string/othersTrips"
        tools:layout="@layout/fragment_others_trip_list" >
        <action
            android:id="@+id/action_othersTripListFragment_to_tripDetailsFragment"
            app:destination="@id/tripDetailsFragment" />
        <action
            android:id="@+id/action_nav_others_list_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_nav_others_list_to_nav_edit_profile"
            app:destination="@id/nav_edit_profile" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="it.polito.mad.carpoolingapp.SearchFragment"
        android:label="@string/searchFragment"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_nav_others_list"
            app:destination="@id/nav_others_list" />
    </fragment>
    <fragment
        android:id="@+id/nav_interesting_list"
        android:name="it.polito.mad.carpoolingapp.TripsOfInterestListFragment"
        android:label="@string/interestingTrips"
        tools:layout="@layout/fragment_trips_of_interest_list" >
        <action
            android:id="@+id/action_nav_interesting_list_to_tripDetailsFragment"
            app:destination="@id/tripDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_bought_list"
        android:name="it.polito.mad.carpoolingapp.BoughtTripListFragment"
        android:label="@string/boughtTrips" >
        <action
            android:id="@+id/action_nav_bought_list_to_tripDetailsFragment"
            app:destination="@id/tripDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/tripRoute"
        android:name="it.polito.mad.carpoolingapp.TripRoute"
        android:label="@string/routeFragment"
        tools:layout="@layout/fragment_trip_route" />
    <fragment
        android:id="@+id/ratingsFragment"
        android:name="it.polito.mad.carpoolingapp.RatingsFragment"
        android:label="@string/ratingsFragment"
        tools:layout="@layout/ratings_fragment" />

</navigation>