<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33242133" />

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/ivContentDesc"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profilepic"
        tools:srcCompat="@drawable/profilepic" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/tvNick"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/ivPhoto"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvNick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/nick"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/tvEmail"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/tvLocation"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/tvNick" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/location"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/tvRatingDriverLabel"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <TextView
        android:id="@+id/tvRatingDriverLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:hint="@string/driverRating"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/ratingBarProfileDriver"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation"/>

    <RatingBar
        android:id="@+id/ratingBarProfileDriver"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="true"
        app:layout_constraintBottom_toTopOf="@+id/tvRatingPassengerLabel"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/tvRatingDriverLabel" />


    <TextView
        android:id="@+id/tvRatingPassengerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:hint="@string/passengerRating"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/ratingBarProfilePassenger"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/ratingBarProfileDriver" />

    <RatingBar
        android:id="@+id/ratingBarProfilePassenger"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/tvRatingPassengerLabel"
        android:isIndicator="true"/>

    <TextView
        android:id="@+id/tvDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:fontFamily="@font/roboto"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/ratingBarProfileDriver"
        app:layout_constraintStart_toEndOf="@+id/ratingBarProfileDriver"
        app:layout_constraintTop_toTopOf="@+id/ratingBarProfileDriver"
        tools:text="3.5" />

    <TextView
        android:id="@+id/tvPassenger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:fontFamily="@font/roboto"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/ratingBarProfilePassenger"
        app:layout_constraintStart_toEndOf="@+id/ratingBarProfilePassenger"
        app:layout_constraintTop_toTopOf="@+id/ratingBarProfilePassenger"
        tools:text="3.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>